Nothing much new, but mention 88 colors support.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ ELinks now:
 
 * support for Lua 4.x was dropped, we only support Lua 5.x now.
 * Python scripting back-end (experimental)
+* 88 colors support
 
 ELinks 0.10.4:
 
